# cmake-nvim-practice2

./: imgui.ini  q
.cache/clangd/index/: Game.cpp.FC3C5691FF430556.idx  Game.h.7076261DB68BD969.idx  Game.h.CD82A7FA57D2A304.idx  main.cpp.E71EC70A9F6D0BC6.idx
source/: CMakeLists.txt  FindPackages.cmake  Find_Packages.cmake  Helper.cmake
source/cmake/: Prac.cmake  Practice.cmake  Sources.cmake  Util.cmake
source/game/: CMakeLists.txt
source/include/Core/: Game.h  Practice.h  Texture2D.h
source/include/Core/Engine/: Camera.h  Game.h  ImGUI.h  ImGUIWindow.h  Mesh.h  Model.h  Physics.h  Practice.h  Shader.h  Texture2D.h
source/include/Core/Gameplay/: Practice.h
source/include/glad/glad/: glad.h
source/shaders/: light.glsl  outline.glsl  screen.glsl  source.glsl  source2.glsl  texture.glsl
source/src/: main.cpp
source/src/Core/: main.cpp
source/src/Core/ElementBuffer/: CMakeLists.txt
source/src/Core/Engine/Bullet/: CMakeLists.txt
source/src/Core/Engine/Camera/: CMakeLists.txt  Camera.cpp
source/src/Core/Engine/ElementBuffer/: CMakeLists.txt
source/src/Core/Engine/Game/: CMakeLists.txt  Game.cpp
source/src/Core/Engine/ImGUI/: CMakeLists.txt  ImGUI.cpp
source/src/Core/Engine/ImGUIWindow/: ImGUIWindow.cpp
source/src/Core/Engine/Mesh/: Mesh.cpp
source/src/Core/Engine/Model/: Model.cpp
source/src/Core/Engine/Physics/: CMakeLists.txt  Physics.cpp
source/src/Core/Engine/Practice/: CMakeLists.txt
source/src/Core/Engine/Shader/: CMakeLists.txt  Shader.cpp
source/src/Core/Engine/Texture2D/: CMakeLists.txt  Texture2D.cpp
source/src/Core/Engine/VertexArray/: CMakeLists.txt
source/src/Core/Engine/VertexBuffer/: CMakeLists.txt
source/src/Core/Engine/stb_image/: CMakeLists.txt
source/src/Core/Game/: CMakeLists.txt  Game.cpp
source/src/Core/Gameplay/Practice/: CMakeLists.txt  Practice.cpp
source/src/Core/Practice/: CMakeLists.txt  Practice.cpp
source/src/Core/Shader/: CMakeLists.txt  Shader.cpp
source/src/Core/Texture2D/: CMakeLists.txt  Texture2D.cpp
source/src/Core/VertexArray/: CMakeLists.txt
source/src/Core/VertexBuffer/: CMakeLists.txt
source/src/Core/stb_image/: CMakeLists.txt
source/src/Game/: CMakeLists.txt  Game.cpp
source/src/Vendors/: glad.c
source/src/Vendors/glad/: CMakeLists.txt  glad.c
